Modernize file reading code in tests